--- a/scss/fxj/_mixins.scss
+++ b/scss/fxj/_mixins.scss
@@ -16,3 +16,7 @@
 @mixin btn-donate() {
   @include button-variant($btn-donate-color, $btn-donate-bg, $btn-donate-border);
 }
+
+.btn-donate {
+  @include button-variant($btn-donate-color, $btn-donate-bg, $btn-donate-border);
+}
