--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -100,6 +100,9 @@
 }
 //Sticky footer
 .sticky-footer {
+  .block {
+    margin-bottom: 0;
+  }
 
   &.container-fluid {
     background-color: $brand-quaternary;
