--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -188,6 +188,7 @@
         @include square(70px);
         border-radius: 35px;
         font-size: 30px;
+        padding-top: 14px;
       }
     }
   }
