fix(view footer): absolute top right only on front page

--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -116,25 +116,27 @@
       top: -10px;
     }
   }
-  .block,
-  .view {
-    position: relative;
+  .path-frontpage .main-container{
+    .block,
+    .view {
+      position: relative;
 
-    .view-footer,
-    .collaborate-footer {
-      position: absolute;
-      right: 0;
+      .view-footer,
+      .collaborate-footer {
+        position: absolute;
+        right: 0;
+      }
     }
-  }
-  .block {
-    .view-footer,
-    .collaborate-footer {
-      top: 4em;
+    .block {
+      .view-footer,
+      .collaborate-footer {
+        top: 4em;
+      }
     }
-  }
-  .view {
-    .view-footer {
-      top: 2em;
+    .view {
+      .view-footer {
+        top: 2em;
+      }
     }
   }
 
