--- a/css/style.css
+++ b/css/style.css
@@ -8816,48 +8816,46 @@ a.a2a_i, i.a2a_i {
     position: relative;
     top: -10px; }
 
-  /* line 119, ../scss/fxj/_views.scss */
-  .block,
-  .view {
+  /* line 120, ../scss/fxj/_views.scss */
+  .path-frontpage .main-container .block,
+  .path-frontpage .main-container .view {
     position: relative; }
-    /* line 123, ../scss/fxj/_views.scss */
-    .block .view-footer,
-    .block .collaborate-footer,
-    .view .view-footer,
-    .view .collaborate-footer {
+    /* line 124, ../scss/fxj/_views.scss */
+    .path-frontpage .main-container .block .view-footer,
+    .path-frontpage .main-container .block .collaborate-footer,
+    .path-frontpage .main-container .view .view-footer,
+    .path-frontpage .main-container .view .collaborate-footer {
       position: absolute;
       right: 0; }
-
-  /* line 130, ../scss/fxj/_views.scss */
-  .block .view-footer,
-  .block .collaborate-footer {
+  /* line 131, ../scss/fxj/_views.scss */
+  .path-frontpage .main-container .block .view-footer,
+  .path-frontpage .main-container .block .collaborate-footer {
     top: 4em; }
-
-  /* line 136, ../scss/fxj/_views.scss */
-  .view .view-footer {
+  /* line 137, ../scss/fxj/_views.scss */
+  .path-frontpage .main-container .view .view-footer {
     top: 2em; } }
-/* line 144, ../scss/fxj/_views.scss */
+/* line 146, ../scss/fxj/_views.scss */
 .collaborate-header {
   margin-bottom: 15px; }
 
-/* line 149, ../scss/fxj/_views.scss */
+/* line 151, ../scss/fxj/_views.scss */
 .main-container .collaborate-header h2 {
   display: none; }
-/* line 158, ../scss/fxj/_views.scss */
+/* line 160, ../scss/fxj/_views.scss */
 .main-container .collaborate-feature {
   background-color: #f1c40f;
   color: white;
   font-size: 20px;
   text-align: center;
   padding: 20px; }
-  /* line 165, ../scss/fxj/_views.scss */
+  /* line 167, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature a {
     color: white; }
-  /* line 169, ../scss/fxj/_views.scss */
+  /* line 171, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature p {
     font-size: 20px;
     font-weight: 300; }
-  /* line 173, ../scss/fxj/_views.scss */
+  /* line 175, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature .fontawesome-icon {
     width: 40px;
     height: 40px;
@@ -8868,10 +8866,10 @@ a.a2a_i, i.a2a_i {
     margin: 0 auto 10px auto;
     padding-top: 8px; }
 @media (min-width: 992px) {
-  /* line 184, ../scss/fxj/_views.scss */
+  /* line 186, ../scss/fxj/_views.scss */
   .main-container .collaborate-feature {
     font-size: 30px; }
-    /* line 187, ../scss/fxj/_views.scss */
+    /* line 189, ../scss/fxj/_views.scss */
     .main-container .collaborate-feature .fontawesome-icon {
       width: 70px;
       height: 70px;
@@ -8879,9 +8877,9 @@ a.a2a_i, i.a2a_i {
       font-size: 30px;
       padding-top: 14px; } }
 
-/* line 198, ../scss/fxj/_views.scss */
+/* line 200, ../scss/fxj/_views.scss */
 .footer .collaborate-header p {
   display: none; }
-/* line 202, ../scss/fxj/_views.scss */
+/* line 204, ../scss/fxj/_views.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
