fix(header): no extra bottom margin on blocks within header

--- a/css/style.css
+++ b/css/style.css
@@ -8123,29 +8123,32 @@ p:last-child,
 /* line 2, ../scss/fxj/_navbar-header.scss */
 .navbar {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+  /* line 4, ../scss/fxj/_navbar-header.scss */
+  .navbar .block {
+    margin-bottom: 0; }
 
-/* line 5, ../scss/fxj/_navbar-header.scss */
+/* line 8, ../scss/fxj/_navbar-header.scss */
 .navbar-header {
   width: 100%;
   /* menu */ }
-  /* line 9, ../scss/fxj/_navbar-header.scss */
+  /* line 12, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     display: block;
     height: 50px;
     margin: 8px 15px 8px 60px;
     padding: 0; }
-    /* line 15, ../scss/fxj/_navbar-header.scss */
+    /* line 18, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo img {
       display: block;
       max-height: 100%; }
-  /* line 21, ../scss/fxj/_navbar-header.scss */
+  /* line 24, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     top: 10px;
     right: 15px;
     position: absolute;
     width: calc(100% - 250px);
     max-width: 200px; }
-  /* line 30, ../scss/fxj/_navbar-header.scss */
+  /* line 33, ../scss/fxj/_navbar-header.scss */
   .navbar-header #superfish-main-toggle {
     width: 40px;
     height: 40px;
@@ -8159,21 +8162,21 @@ p:last-child,
     text-align: center;
     text-decoration: none;
     top: 10px; }
-    /* line 50, ../scss/fxj/_navbar-header.scss */
+    /* line 53, ../scss/fxj/_navbar-header.scss */
     .navbar-header #superfish-main-toggle:hover, .navbar-header #superfish-main-toggle:focus {
       background-color: #333333;
       color: white; }
-  /* line 65, ../scss/fxj/_navbar-header.scss */
+  /* line 68, ../scss/fxj/_navbar-header.scss */
   .navbar-header .menu > li:not(:last-of-type) .menu-enlace {
     color: #333333;
     text-decoration: none; }
-    /* line 70, ../scss/fxj/_navbar-header.scss */
+    /* line 73, ../scss/fxj/_navbar-header.scss */
     .navbar-header .menu > li:not(:last-of-type) .menu-enlace:not(.menuparent):hover, .navbar-header .menu > li:not(:last-of-type) .menu-enlace:not(.menuparent):focus {
       color: #16a085; }
-  /* line 78, ../scss/fxj/_navbar-header.scss */
+  /* line 81, ../scss/fxj/_navbar-header.scss */
   .navbar-header .menu > li:last-of-type {
     padding: 14px 21px; }
-    /* line 81, ../scss/fxj/_navbar-header.scss */
+    /* line 84, ../scss/fxj/_navbar-header.scss */
     .navbar-header .menu > li:last-of-type .menu-enlace {
       color: #fff;
       background-color: #f1c40f;
@@ -8212,35 +8215,35 @@ p:last-child,
       .navbar-header .menu > li:last-of-type .menu-enlace .badge {
         color: #f1c40f;
         background-color: #fff; }
-  /* line 92, ../scss/fxj/_navbar-header.scss */
+  /* line 95, ../scss/fxj/_navbar-header.scss */
   .navbar-header .menu .menu-sub:not(.sf-no-children):before {
     position: absolute;
     right: 0;
     top: 1em; }
-  /* line 105, ../scss/fxj/_navbar-header.scss */
+  /* line 108, ../scss/fxj/_navbar-header.scss */
   .navbar-header .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .menu .menu-sub:not(.sf-no-children):focus:before {
     color: #16a085; }
-  /* line 112, ../scss/fxj/_navbar-header.scss */
+  /* line 115, ../scss/fxj/_navbar-header.scss */
   .navbar-header .menu .sf-has-clone-parent {
     margin-left: 15px; }
 
 @media (min-width: 992px) {
-  /* line 120, ../scss/fxj/_navbar-header.scss */
+  /* line 123, ../scss/fxj/_navbar-header.scss */
   .navbar-header .region-navigation {
     position: relative; }
-  /* line 123, ../scss/fxj/_navbar-header.scss */
+  /* line 126, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     margin-left: 0; }
-  /* line 127, ../scss/fxj/_navbar-header.scss */
+  /* line 130, ../scss/fxj/_navbar-header.scss */
   .navbar-header .block-superfish .menu {
     margin-right: 250px;
     text-align: right; }
-    /* line 131, ../scss/fxj/_navbar-header.scss */
+    /* line 134, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block-superfish .menu > li {
       display: inline-block;
       float: none;
       margin-right: 1px; }
-      /* line 136, ../scss/fxj/_navbar-header.scss */
+      /* line 139, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li:not(:last-of-type) > a {
         border-bottom: 5px solid white;
         bottom: -4px;
@@ -8248,37 +8251,37 @@ p:last-child,
         font-weight: 300;
         padding: 20px 25px 20px 20px;
         position: relative; }
-        /* line 144, ../scss/fxj/_navbar-header.scss */
+        /* line 147, ../scss/fxj/_navbar-header.scss */
         .navbar-header .block-superfish .menu > li:not(:last-of-type) > a:hover, .navbar-header .block-superfish .menu > li:not(:last-of-type) > a:focus {
           border-color: #16a085; }
-      /* line 152, ../scss/fxj/_navbar-header.scss */
+      /* line 155, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li:not(:last-of-type).sfHover > a, .navbar-header .block-superfish .menu > li:not(:last-of-type).active-trail > a {
         border-color: #16a085; }
-      /* line 157, ../scss/fxj/_navbar-header.scss */
+      /* line 160, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li:last-of-type {
         padding: 9px 20px; }
-      /* line 161, ../scss/fxj/_navbar-header.scss */
+      /* line 164, ../scss/fxj/_navbar-header.scss */
       .navbar-header .block-superfish .menu > li > ul {
         box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
         background-color: white;
         text-align: left;
         top: auto; }
-        /* line 167, ../scss/fxj/_navbar-header.scss */
+        /* line 170, ../scss/fxj/_navbar-header.scss */
         .navbar-header .block-superfish .menu > li > ul > li > a {
           font-weight: 300;
           font-size: 16px;
           padding: 10px 20px; }
-    /* line 176, ../scss/fxj/_navbar-header.scss */
+    /* line 179, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):before {
       top: 24px; }
-    /* line 181, ../scss/fxj/_navbar-header.scss */
+    /* line 184, ../scss/fxj/_navbar-header.scss */
     .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
       color: #333333; }
-  /* line 189, ../scss/fxj/_navbar-header.scss */
+  /* line 192, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     right: 0px;
     top: 15px; }
-    /* line 193, ../scss/fxj/_navbar-header.scss */
+    /* line 196, ../scss/fxj/_navbar-header.scss */
     .navbar-header .search-block-form .form-item {
       margin-bottom: 0; } }
 /* line 2, ../scss/fxj/_forms.scss */
