fix(cookies): bottom positionning

--- a/css/style.css
+++ b/css/style.css
@@ -8343,7 +8343,7 @@ p:last-child,
 /* line 2, ../scss/fxj/_footer.scss */
 #sliding-popup {
   background: transparent none;
-  bottom: 0;
+  bottom: 15px;
   position: fixed;
   width: 100%;
   z-index: 21;
