--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -1,7 +1,7 @@
 //EU Cookies Compliance
 #sliding-popup {
   background: transparent none;
-  bottom: 0;
+  bottom: 15px;
   position: fixed;
   width: 100%;
   z-index: 21;
